--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-_anaconda_depends=2023.03=py39_0
-_ipyw_jlab_nb_ext_conf=0.1.0=py39h06a4308_1
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
+#_anaconda_depends=2023.03=py39_0
+#_ipyw_jlab_nb_ext_conf=0.1.0=py39h06a4308_1
+#_libgcc_mutex=0.1=main
+#_openmp_mutex=5.1=1_gnu
 abseil-cpp=20211102.0=hd4dd3e8_0
 affine=2.3.0=pyhd3eb1b0_0
 alabaster=0.7.12=pyhd3eb1b0_0
