--- a/requirements.txt
+++ b/requirements.txt
@@ -1,534 +1,131 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-#_anaconda_depends=2023.03=py39_0
-#_ipyw_jlab_nb_ext_conf=0.1.0=py39h06a4308_1
-#_libgcc_mutex=0.1=main
-#_openmp_mutex=5.1=1_gnu
-abseil-cpp=20211102.0=hd4dd3e8_0
-affine=2.3.0=pyhd3eb1b0_0
-alabaster=0.7.12=pyhd3eb1b0_0
-altair=4.1.0=py_1
-anaconda=custom=py39_1
-anaconda-client=1.11.2=py39h06a4308_0
-anaconda-navigator=2.4.0=py39h06a4308_0
-anyio=3.5.0=py39h06a4308_0
-appdirs=1.4.4=pyhd3eb1b0_0
-argon2-cffi=21.3.0=pyhd3eb1b0_0
-argon2-cffi-bindings=21.2.0=py39h7f8727e_0
-arrow=1.2.2=pyhd3eb1b0_0
-arrow-cpp=11.0.0=py39h613000e_0
-astroid=2.14.2=py39h06a4308_0
-astropy=5.1=py39h7deecbd_0
-asttokens=2.0.5=pyhd3eb1b0_0
-atomicwrites=1.4.0=py_0
-attrs=22.1.0=py39h06a4308_0
-automat=20.2.0=py_0
-autopep8=1.6.0=pyhd3eb1b0_1
-aws-c-common=0.4.57=he6710b0_1
-aws-c-event-stream=0.1.6=h2531618_5
-aws-checksums=0.1.9=he6710b0_0
-aws-sdk-cpp=1.8.185=hce553d0_0
-babel=2.11.0=py39h06a4308_0
-backcall=0.2.0=pyhd3eb1b0_0
-backports=1.1=pyhd3eb1b0_0
-backports.functools_lru_cache=1.6.4=pyhd3eb1b0_0
-backports.tempfile=1.0=pyhd3eb1b0_1
-backports.weakref=1.0.post1=py_1
-bcrypt=3.2.0=py39h5eee18b_1
-beautifulsoup4=4.12.2=py39h06a4308_0
-binaryornot=0.4.4=pyhd3eb1b0_1
-black=22.6.0=py39h06a4308_0
-blas=1.0=mkl
-bleach=4.1.0=pyhd3eb1b0_0
-blinker=1.4=py39h06a4308_0
-blosc=1.21.3=h6a678d5_0
-bokeh=2.4.3=py39h06a4308_0
-boltons=23.0.0=py39h06a4308_0
-boost-cpp=1.73.0=h7f8727e_12
-bottleneck=1.3.5=py39h7deecbd_0
-branca=0.6.0=py39h06a4308_0
-brotli=1.0.9=h5eee18b_7
-brotli-bin=1.0.9=h5eee18b_7
-brotlipy=0.7.0=py39h27cfd23_1003
-brunsli=0.1=h2531618_0
-bs4=0.0.1=pypi_0
-bzip2=1.0.8=h7b6447c_0
-c-ares=1.19.0=h5eee18b_0
-ca-certificates=2023.01.10=h06a4308_0
-cachetools=4.2.2=pyhd3eb1b0_0
-cairo=1.16.0=hb05425b_4
-cartopy=0.18.0=py39h0d9ca2b_1
-certifi=2023.5.7=py39h06a4308_0
-cffi=1.15.1=py39h5eee18b_3
-cfitsio=3.470=h5893167_7
-chardet=4.0.0=py39h06a4308_1003
-charls=2.2.0=h2531618_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.0.4=py39h06a4308_0
-click-plugins=1.1.1=pyhd3eb1b0_0
-cligj=0.7.2=py39h06a4308_0
-cloudpickle=2.2.1=py39h06a4308_0
-clyent=1.2.2=py39h06a4308_1
-colorama=0.4.6=py39h06a4308_0
-colorcet=3.0.1=py39h06a4308_0
-comm=0.1.2=py39h06a4308_0
-conda=23.3.1=py39h06a4308_0
-conda-build=3.24.0=py39h06a4308_0
-conda-content-trust=0.1.3=py39h06a4308_0
-conda-env=2.6.0=1
-conda-package-handling=2.0.2=py39h06a4308_0
-conda-package-streaming=0.7.0=py39h06a4308_0
-conda-repo-cli=1.0.41=py39h06a4308_0
-conda-token=0.4.0=pyhd3eb1b0_0
-conda-verify=3.4.2=py_1
-constantly=15.1.0=pyh2b92418_0
-contextily=1.3.0=pyhd8ed1ab_0
-cookiecutter=1.7.3=pyhd3eb1b0_0
-cryptography=39.0.1=py39h9ce1e76_0
-cssselect=1.1.0=pyhd3eb1b0_0
-curl=7.88.1=h5eee18b_0
-cycler=0.11.0=pyhd3eb1b0_0
-cytoolz=0.12.0=py39h5eee18b_0
-daal4py=2023.1.1=py39h79cecc1_0
-dal=2023.1.1=hdb19cb5_48679
-dask=2023.4.1=py39h06a4308_0
-dask-core=2023.4.1=py39h06a4308_0
-datashader=0.14.4=py39h06a4308_0
-datashape=0.5.4=py39h06a4308_1
-dbus=1.13.18=hb2f20db_0
-debugpy=1.5.1=py39h295c915_0
-decorator=5.1.1=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-deprecated=1.2.13=pypi_0
-diff-match-patch=20200713=pyhd3eb1b0_0
-dill=0.3.6=py39h06a4308_0
-distributed=2023.4.1=py39h06a4308_0
-docstring-to-markdown=0.11=py39h06a4308_0
-docutils=0.18.1=py39h06a4308_3
-entrypoints=0.4=py39h06a4308_0
-et_xmlfile=1.1.0=py39h06a4308_0
-exceptiongroup=1.0.4=py39h06a4308_0
-executing=0.8.3=pyhd3eb1b0_0
-expat=2.4.9=h6a678d5_0
-filelock=3.9.0=py39h06a4308_0
-fiona=1.8.22=py39h417a72b_0
-flake8=6.0.0=py39h06a4308_0
-flask=2.2.2=py39h06a4308_0
-folium=0.14.0=py39h06a4308_0
-fontconfig=2.14.1=h52c9d5c_1
-fonttools=4.25.0=pyhd3eb1b0_0
-freetype=2.12.1=h4a9f257_0
-freexl=1.0.6=h27cfd23_0
-fsspec=2023.4.0=py39h06a4308_0
-future=0.18.3=py39h06a4308_0
-gdal=3.0.2=py39h40f10ac_3
-gensim=4.3.0=py39h6a678d5_0
-geographiclib=1.52=pyhd8ed1ab_0
-geopandas=0.12.2=py39h06a4308_0
-geopandas-base=0.12.2=py39h06a4308_0
-geopy=2.3.0=pyhd8ed1ab_0
-geos=3.8.0=he6710b0_0
-geotiff=1.7.0=h2a26cda_1
-getorg=0.3.1=pypi_0
-gflags=2.2.2=he6710b0_0
-giflib=5.2.1=h5eee18b_3
-gitdb=4.0.7=pyhd3eb1b0_0
-gitpython=3.1.30=py39h06a4308_0
-glib=2.69.1=he621ea3_2
-glob2=0.7=pyhd3eb1b0_0
-glog=0.5.0=h2531618_0
-gmp=6.2.1=h295c915_3
-gmpy2=2.1.2=py39heeb90bb_0
-greenlet=2.0.1=py39h6a678d5_0
-grpc-cpp=1.46.1=h33aed49_1
-gst-plugins-base=1.14.1=h6a678d5_1
-gstreamer=1.14.1=h5eee18b_1
-h5py=3.7.0=py39h737f45e_0
-haversine=2.8.0=pyhd8ed1ab_0
-hdf4=4.2.13=h3ca952b_2
-hdf5=1.10.6=h3ffc7dd_1
-heapdict=1.0.1=pyhd3eb1b0_0
-holoviews=1.15.4=py39h06a4308_0
-html5lib=1.1=pyhd3eb1b0_0
-htmlmin=0.1.12=pyhd3eb1b0_1
-huggingface_hub=0.14.1=py39h06a4308_0
-hvplot=0.8.2=py39h06a4308_0
-hyperlink=21.0.0=pyhd3eb1b0_0
-icu=58.2=he6710b0_3
-idna=3.4=py39h06a4308_0
-imagecodecs=2021.8.26=py39hf0132c2_1
-imagehash=4.3.1=py39h06a4308_0
-imageio=2.26.0=py39h06a4308_0
-imagesize=1.4.1=py39h06a4308_0
-imbalanced-learn=0.10.1=py39h06a4308_0
-importlib-metadata=6.0.0=py39h06a4308_0
-importlib_metadata=6.0.0=hd3eb1b0_0
-incremental=21.3.0=pyhd3eb1b0_0
-inflection=0.5.1=py39h06a4308_0
-iniconfig=1.1.1=pyhd3eb1b0_0
-intake=0.6.8=py39h06a4308_0
-intel-openmp=2023.1.0=hdb19cb5_46305
-intervaltree=3.1.0=pyhd3eb1b0_0
-ipykernel=6.19.2=py39hb070fc8_0
-ipython=8.12.0=py39h06a4308_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-ipywidgets=8.0.4=py39h06a4308_0
-isort=5.9.3=pyhd3eb1b0_0
-itemadapter=0.3.0=pyhd3eb1b0_0
-itemloaders=1.0.4=pyhd3eb1b0_1
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jaraco.classes=3.2.1=pyhd3eb1b0_0
-jedi=0.18.1=py39h06a4308_1
-jeepney=0.7.1=pyhd3eb1b0_0
-jellyfish=0.9.0=py39h7f8727e_0
-jinja2=3.1.2=py39h06a4308_0
-jinja2-time=0.2.0=pyhd3eb1b0_3
-jmespath=0.10.0=pyhd3eb1b0_0
-joblib=1.1.1=py39h06a4308_0
-jpeg=9e=h5eee18b_1
-jq=1.6=h27cfd23_1000
-json-c=0.13.1=h1bed415_0
-json5=0.9.6=pyhd3eb1b0_0
-jsonpatch=1.32=pyhd3eb1b0_0
-jsonpointer=2.1=pyhd3eb1b0_0
-jsonschema=4.17.3=py39h06a4308_0
-jupyter=1.0.0=py39h06a4308_8
-jupyter_client=8.1.0=py39h06a4308_0
-jupyter_console=6.6.3=py39h06a4308_0
-jupyter_core=5.3.0=py39h06a4308_0
-jupyter_server=1.23.4=py39h06a4308_0
-jupyterlab=3.5.3=py39h06a4308_0
-jupyterlab_pygments=0.1.2=py_0
-jupyterlab_server=2.22.0=py39h06a4308_0
-jupyterlab_widgets=3.0.5=py39h06a4308_0
-jxrlib=1.1=h7b6447c_2
-kealib=1.4.14=hb50703a_1
-keyring=23.13.1=py39h06a4308_0
-kiwisolver=1.4.4=py39h6a678d5_0
-krb5=1.19.4=h568e23c_0
-lazy-object-proxy=1.6.0=py39h27cfd23_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.38=h1181459_1
-lerc=3.0=h295c915_0
-libaec=1.0.4=he6710b0_1
-libarchive=3.6.2=hab531cd_0
-libboost=1.73.0=h28710b8_12
-libbrotlicommon=1.0.9=h5eee18b_7
-libbrotlidec=1.0.9=h5eee18b_7
-libbrotlienc=1.0.9=h5eee18b_7
-libclang=10.0.1=default_hb85057a_2
-libcurl=7.88.1=h91b91d3_0
-libdap4=3.19.1=h6ec2957_0
-libdeflate=1.8=h7f8727e_5
-libedit=3.1.20221030=h5eee18b_0
-libev=4.33=h7f8727e_1
-libevent=2.1.12=h8f2d780_0
-libffi=3.4.4=h6a678d5_0
-libgcc-ng=11.2.0=h1234567_1
-libgdal=3.0.2=h1d2d1f6_3
-libgfortran-ng=11.2.0=h00389a5_1
-libgfortran5=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libkml=1.3.0=h096b73e_6
-liblief=0.12.3=h6a678d5_0
-libllvm10=10.0.1=hbcb73fb_5
-libllvm14=14.0.6=hdb19cb5_3
-libnetcdf=4.8.1=h8322cc2_2
-libnghttp2=1.46.0=hce63b2e_0
-libopenblas=0.3.21=h043d6bf_0
-libpng=1.6.39=h5eee18b_0
-libpq=12.9=h16c4e8d_3
-libprotobuf=3.20.3=he621ea3_0
-libsodium=1.0.18=h7b6447c_0
-libspatialindex=1.9.3=h2531618_0
-libspatialite=4.3.0a=h71b31bf_21
-libssh2=1.10.0=h8f2d780_0
-libstdcxx-ng=11.2.0=h1234567_1
-libthrift=0.15.0=hcc01f38_0
-libtiff=4.5.0=h6a678d5_1
-libuuid=1.41.5=h5eee18b_0
-libwebp=1.2.4=h11a3e52_1
-libwebp-base=1.2.4=h5eee18b_1
-libxcb=1.15=h7f8727e_0
-libxkbcommon=1.0.1=hfa300c1_0
-libxml2=2.9.14=h74e7548_0
-libxslt=1.1.35=h4e12654_0
-libzip=1.8.0=h5cef20c_0
-libzopfli=1.0.3=he6710b0_0
-llvmlite=0.40.0=py39he621ea3_0
-locket=1.0.0=py39h06a4308_0
-lxml=4.9.1=py39h1edc446_0
-lz4-c=1.9.4=h6a678d5_0
-lzo=2.10=h7b6447c_2
-mapclassify=2.5.0=py39h06a4308_0
-markdown=3.4.1=py39h06a4308_0
-markdown-it-py=2.2.0=py39h06a4308_1
-markupsafe=2.1.1=py39h7f8727e_0
-matplotlib=3.5.2=py39h06a4308_0
-matplotlib-base=3.5.2=py39hf590b9c_0
-matplotlib-inline=0.1.6=py39h06a4308_0
-mccabe=0.7.0=pyhd3eb1b0_0
-mdurl=0.1.0=py39h06a4308_0
-mercantile=1.2.1=pyhd8ed1ab_0
-mistune=0.8.4=py39h27cfd23_1000
-mkl=2023.1.0=h6d00ec8_46342
-mkl-service=2.4.0=py39h5eee18b_1
-mkl_fft=1.3.6=py39h417a72b_1
-mkl_random=1.2.2=py39h417a72b_1
-mock=4.0.3=pyhd3eb1b0_0
-more-itertools=8.12.0=pyhd3eb1b0_0
-mpc=1.1.0=h10f8cd9_1
-mpfr=4.0.2=hb69a4c5_1
-mpi=1.0=mpich
-mpich=4.1.1=hbae89fd_0
-mpmath=1.2.1=py39h06a4308_0
-msgpack-python=1.0.3=py39hd09550d_0
-multimethod=1.5=pyhd3eb1b0_0
-multipledispatch=0.6.0=py39h06a4308_0
-munch=2.5.0=pyhd3eb1b0_0
-munkres=1.1.4=py_0
-mypy_extensions=0.4.3=py39h06a4308_1
-navigator-updater=0.3.0=py39h06a4308_0
-nbclassic=0.5.5=py39h06a4308_0
-nbclient=0.5.13=py39h06a4308_0
-nbconvert=6.5.4=py39h06a4308_0
-nbformat=5.7.0=py39h06a4308_0
-ncurses=6.4=h6a678d5_0
-nest-asyncio=1.5.6=py39h06a4308_0
-networkx=2.8.4=py39h06a4308_1
-ninja=1.10.2=h06a4308_5
-ninja-base=1.10.2=hd09550d_5
-nltk=3.7=pyhd3eb1b0_0
-notebook=6.5.4=py39h06a4308_0
-notebook-shim=0.2.2=py39h06a4308_0
-nspr=4.33=h295c915_0
-nss=3.74=h0370c37_0
-numba=0.57.0=py39h1128e8f_0
-numexpr=2.8.4=py39hc78ab66_1
-numpy=1.23.5=py39hf6e8229_1
-numpy-base=1.23.5=py39h060ed82_1
-numpydoc=1.5.0=py39h06a4308_0
-oniguruma=6.9.7.1=h27cfd23_0
-openjpeg=2.4.0=h3ad879b_0
-openpyxl=3.0.10=py39h5eee18b_0
-openssl=1.1.1t=h7f8727e_0
-orc=1.7.4=hb3bc3d3_1
-osmnx=1.3.0=pyhd8ed1ab_0
-packaging=23.0=py39h06a4308_0
-pandas=1.5.3=py39h417a72b_0
-pandas-profiling=3.6.3=py39h06a4308_0
-pandocfilters=1.5.0=pyhd3eb1b0_0
-panel=0.14.3=py39h06a4308_0
-param=1.12.3=py39h06a4308_0
-parsel=1.6.0=py39h06a4308_0
-parso=0.8.3=pyhd3eb1b0_0
-partd=1.2.0=pyhd3eb1b0_1
-patch=2.7.6=h7b6447c_1001
-patchelf=0.17.2=h6a678d5_0
-pathlib=1.0.1=pyhd3eb1b0_1
-pathspec=0.9.0=py39h06a4308_0
-patsy=0.5.3=py39h06a4308_0
-pcre=8.45=h295c915_0
-pep8=1.7.1=py39h06a4308_1
-pexpect=4.8.0=pyhd3eb1b0_3
-phik=0.12.3=py39hdb19cb5_0
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=9.4.0=py39h6a678d5_0
-pip=23.0.1=py39h06a4308_0
-pixman=0.40.0=h7f8727e_1
-pkginfo=1.9.6=py39h06a4308_0
-platformdirs=2.5.2=py39h06a4308_0
-plotly=5.9.0=py39h06a4308_0
-pluggy=1.0.0=py39h06a4308_1
-ply=3.11=py39h06a4308_0
-poppler=0.81.0=h01f5e8b_2
-poppler-data=0.4.11=h06a4308_1
-poyo=0.5.0=pyhd3eb1b0_0
-proj=6.2.1=h05a3930_0
-prometheus_client=0.14.1=py39h06a4308_0
-prompt-toolkit=3.0.36=py39h06a4308_0
-prompt_toolkit=3.0.36=hd3eb1b0_0
-protego=0.1.16=py_0
-protobuf=3.20.3=py39h6a678d5_0
-psutil=5.9.0=py39h5eee18b_0
-ptyprocess=0.7.0=pyhd3eb1b0_2
-pure_eval=0.2.2=pyhd3eb1b0_0
-py-lief=0.12.3=py39h6a678d5_0
-pyarrow=11.0.0=py39h992f0b0_0
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pycodestyle=2.10.0=py39h06a4308_0
-pycosat=0.6.4=py39h5eee18b_0
-pycparser=2.21=pyhd3eb1b0_0
-pyct=0.5.0=py39h06a4308_0
-pycurl=7.45.2=py39h37d81fd_0
-pydantic=1.10.2=py39h5eee18b_0
-pydeck=0.7.1=py39h06a4308_0
-pydispatcher=2.0.5=py39h06a4308_2
-pydocstyle=6.3.0=py39h06a4308_0
-pyerfa=2.0.0=py39h27cfd23_0
-pyflakes=3.0.1=py39h06a4308_0
-pygithub=1.58.1=pypi_0
-pygments=2.15.1=py39h06a4308_1
-pyjwt=2.4.0=py39h06a4308_0
-pylint=2.16.2=py39h06a4308_0
-pylint-venv=2.3.0=py39h06a4308_0
-pyls-spyder=0.4.0=pyhd3eb1b0_0
-pympler=0.9=py_0
-pynacl=1.5.0=pypi_0
-pyodbc=4.0.34=py39h6a678d5_0
-pyopenssl=23.0.0=py39h06a4308_0
-pyparsing=3.0.9=py39h06a4308_0
-pyproj=2.6.1.post1=py39hb3025e9_1
-pyqt=5.15.7=py39h6a678d5_1
-pyqt5-sip=12.11.0=py39h6a678d5_1
-pyqtwebengine=5.15.7=py39h6a678d5_1
-pyrsistent=0.18.0=py39heee7806_0
-pyshp=2.1.3=pyhd3eb1b0_0
-pysocks=1.7.1=py39h06a4308_0
-pytables=3.7.0=py39hf19a122_1
-pytest=7.3.1=py39h06a4308_0
-python=3.9.16=h7a1cb2a_2
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-dotenv=0.21.0=py39h06a4308_0
-python-fastjsonschema=2.16.2=py39h06a4308_0
-python-libarchive-c=2.9=pyhd3eb1b0_1
-python-lmdb=1.4.1=py39h6a678d5_0
-python-lsp-black=1.2.1=py39h06a4308_0
-python-lsp-jsonrpc=1.0.0=pyhd3eb1b0_0
-python-lsp-server=1.7.2=py39h06a4308_0
-python-slugify=5.0.2=pyhd3eb1b0_0
-python-snappy=0.6.1=py39h6a678d5_0
-pytoolconfig=1.2.5=py39h06a4308_1
-pytorch=1.13.1=cpu_py39h92724a6_0
-pytz=2022.7=py39h06a4308_0
-pyviz_comms=2.0.2=pyhd3eb1b0_0
-pywavelets=1.4.1=py39h5eee18b_0
-pyxdg=0.27=pyhd3eb1b0_0
-pyyaml=6.0=py39h5eee18b_1
-pyzmq=25.0.2=py39h6a678d5_0
-qdarkstyle=3.0.2=pyhd3eb1b0_0
-qstylizer=0.2.2=py39h06a4308_0
-qt-main=5.15.2=h327a75a_7
-qt-webengine=5.15.9=hd2b0992_4
-qtawesome=1.2.2=py39h06a4308_0
-qtconsole=5.4.2=py39h06a4308_0
-qtpy=2.2.0=py39h06a4308_0
-qtwebkit=5.212=h4eab89a_4
-queuelib=1.5.0=py39h06a4308_0
-rasterio=1.2.10=py39h9a6c7ee_0
-re2=2022.04.01=h295c915_0
-readline=8.2=h5eee18b_0
-regex=2022.7.9=py39h5eee18b_0
-requests=2.28.1=py39h06a4308_1
-requests-file=1.5.1=pyhd3eb1b0_0
-requests-toolbelt=0.9.1=pyhd3eb1b0_0
-retrying=1.3.4=pypi_0
-rich=13.3.5=py39h06a4308_0
-ripgrep=13.0.0=hbdeaff8_0
-rope=1.7.0=py39h06a4308_0
-rtree=1.0.1=py39h06a4308_0
-ruamel.yaml=0.17.21=py39h5eee18b_0
-ruamel.yaml.clib=0.2.6=py39h5eee18b_1
-scikit-image=0.19.3=py39h6a678d5_1
-scikit-learn=1.2.2=py39h6a678d5_0
-scikit-learn-intelex=2023.1.1=py39h06a4308_0
-scipy=1.9.3=py39hf6e8229_2
-scrapy=2.8.0=py39h06a4308_0
-seaborn=0.12.2=py39h06a4308_0
-secretstorage=3.3.1=py39h06a4308_1
-semver=2.13.0=pyhd3eb1b0_0
-send2trash=1.8.0=pyhd3eb1b0_1
-service_identity=18.1.0=pyhd3eb1b0_1
-setuptools=66.0.0=py39h06a4308_0
-shapely=2.0.1=py39h0fbb895_0
-sip=6.6.2=py39h6a678d5_0
-six=1.16.0=pyhd3eb1b0_1
-smart_open=5.2.1=py39h06a4308_0
-smmap=4.0.0=pyhd3eb1b0_0
-snappy=1.1.9=h295c915_0
-sniffio=1.2.0=py39h06a4308_1
-snowballstemmer=2.2.0=pyhd3eb1b0_0
-snuggs=1.4.7=pyhd3eb1b0_0
-sortedcontainers=2.4.0=pyhd3eb1b0_0
-soupsieve=2.4=py39h06a4308_0
-sphinx=5.0.2=py39h06a4308_0
-sphinxcontrib-applehelp=1.0.2=pyhd3eb1b0_0
-sphinxcontrib-devhelp=1.0.2=pyhd3eb1b0_0
-sphinxcontrib-htmlhelp=2.0.0=pyhd3eb1b0_0
-sphinxcontrib-jsmath=1.0.1=pyhd3eb1b0_0
-sphinxcontrib-qthelp=1.0.3=pyhd3eb1b0_0
-sphinxcontrib-serializinghtml=1.1.5=pyhd3eb1b0_0
-spyder=5.4.3=py39h06a4308_1
-spyder-kernels=2.4.3=py39h06a4308_0
-sqlalchemy=1.4.39=py39h5eee18b_0
-sqlite=3.41.2=h5eee18b_0
-stack_data=0.2.0=pyhd3eb1b0_0
-statsmodels=0.13.5=py39h7deecbd_1
-streamlit=1.16.0=py39h06a4308_0
-sympy=1.11.1=py39h06a4308_0
-tabulate=0.8.10=py39h06a4308_0
-tangled-up-in-unicode=0.2.0=py39h06a4308_0
-tbb=2021.8.0=hdb19cb5_0
-tbb4py=2021.8.0=py39hdb19cb5_0
-tblib=1.7.0=pyhd3eb1b0_0
-tenacity=8.2.2=py39h06a4308_0
-terminado=0.17.1=py39h06a4308_0
-text-unidecode=1.3=pyhd3eb1b0_0
-textdistance=4.2.1=pyhd3eb1b0_0
-threadpoolctl=2.2.0=pyh0d69192_0
-three-merge=0.1.1=pyhd3eb1b0_0
-tifffile=2021.7.2=pyhd3eb1b0_2
-tiledb=2.3.3=h1132f93_2
-tinycss2=1.2.1=py39h06a4308_0
-tk=8.6.12=h1ccaba5_0
-tldextract=3.2.0=pyhd3eb1b0_0
-tokenizers=0.11.4=py39h3dcd8bd_1
-toml=0.10.2=pyhd3eb1b0_0
-tomli=2.0.1=py39h06a4308_0
-tomlkit=0.11.1=py39h06a4308_0
-toolz=0.12.0=py39h06a4308_0
-tornado=6.2=py39h5eee18b_0
-tqdm=4.64.1=py39h06a4308_0
-traitlets=5.7.1=py39h06a4308_0
-transformers=4.24.0=py39h06a4308_0
-twisted=22.10.0=py39h5eee18b_0
-typeguard=2.13.3=py39h06a4308_0
-typing-extensions=4.5.0=py39h06a4308_0
-typing_extensions=4.5.0=py39h06a4308_0
-tzdata=2023c=h04d1e81_0
-tzlocal=2.1=py39h06a4308_1
-ujson=5.4.0=py39h6a678d5_0
-unidecode=1.2.0=pyhd3eb1b0_0
-unixodbc=2.3.11=h5eee18b_0
-urllib3=1.26.15=py39h06a4308_0
-utf8proc=2.6.1=h27cfd23_0
-validators=0.18.2=pyhd3eb1b0_0
-visions=0.7.5=py39h06a4308_0
-w3lib=1.21.0=pyhd3eb1b0_0
-watchdog=2.1.6=py39h06a4308_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-webencodings=0.5.1=py39h06a4308_1
-websocket-client=0.58.0=py39h06a4308_4
-werkzeug=2.2.3=py39h06a4308_0
-whatthepatch=1.0.2=py39h06a4308_0
-wheel=0.38.4=py39h06a4308_0
-widgetsnbextension=4.0.5=py39h06a4308_0
-wrapt=1.14.1=py39h5eee18b_0
-wurlitzer=3.0.2=py39h06a4308_0
-xarray=2022.11.0=py39h06a4308_0
-xerces-c=3.2.4=h94c2ce2_0
-xyzservices=2022.9.0=py39h06a4308_1
-xz=5.4.2=h5eee18b_0
-yaml=0.2.5=h7b6447c_0
-yapf=0.31.0=pyhd3eb1b0_0
-zeromq=4.3.4=h2531618_0
-zfp=0.5.5=h295c915_6
-zict=2.2.0=py39h06a4308_0
-zipp=3.11.0=py39h06a4308_0
-zlib=1.2.13=h5eee18b_0
-zope=1.0=py39h06a4308_1
-zope.interface=5.4.0=py39h7f8727e_0
-zstandard=0.19.0=py39h5eee18b_0
-zstd=1.5.5=hc292b87_0
+altair==4.2.2
+asttokens==2.2.1
+attrs==19.3.0
+Automat==0.8.0
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+blinker==1.4
+cachetools==5.3.0
+certifi==2019.11.28
+chardet==3.0.4
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+cloud-init==23.1.2
+colorama==0.4.3
+comm==0.1.2
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+dbus-python==1.2.16
+debugpy==1.6.6
+decorator==5.1.1
+distro==1.4.0
+distro-info===0.23ubuntu1
+entrypoints==0.3
+executing==1.2.0
+Fiona==1.9.3
+geopandas==0.12.2
+gitdb==4.0.10
+GitPython==3.1.30
+httplib2==0.14.0
+hyperlink==19.0.0
+idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+ipykernel==6.20.2
+ipython==8.8.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+jupyter_client==7.4.9
+jupyter_core==5.1.5
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+more-itertools==4.2.0
+munch==2.5.0
+nest-asyncio==1.5.6
+netifaces==0.10.4
+numpy==1.24.1
+oauthlib==3.1.0
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==2.6.2
+prompt-toolkit==3.0.36
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pydeck==0.8.0
+Pygments==2.14.0
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+Pympler==1.0.1
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyproj==3.5.0
+pyrsistent==0.15.5
+pyserial==3.4
+python-apt==2.0.1+ubuntu0.20.4.1
+python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
+python-dotenv==0.21.1
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==5.3.1
+pyzmq==25.0.0
+requests==2.22.0
+requests-unixsocket==0.2.0
+rich==13.3.1
+scikit-learn==1.2.2
+scipy==1.10.1
+SecretStorage==2.3.1
+semver==2.13.0
+service-identity==18.1.0
+shapely==2.0.1
+simplejson==3.16.0
+six==1.14.0
+smmap==5.0.0
+ssh-import-id==5.10
+stack-data==0.6.2
+streamlit==1.18.1
+systemd-python==234
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+traitlets==5.8.1
+Twisted==18.9.0
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+ubuntu-advantage-tools==20.3
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+validators==0.20.0
+wadllib==1.3.3
+watchdog==2.2.1
+wcwidth==0.2.6
+zipp==1.0.0
+zope.interface==4.7.1
