--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 pandas==1.5.3
 scikit_learn==1.2.2
-streamlit==1.18.1
+seaborn==0.12.2
+numpy==1.24.3 
+matplotlib==3.7.1
 pickleshare==0.7.5
+flask==2.2.2
